tests/myTests/parserTests/fail/test0.c
#include "Test[0] -> Expected: Fail"
#include "Tests: Include without string literal"
#include a